<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signUpRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/darkerOrange"
    tools:context="com.username.your_application.entrance.SignUpActivity">

    <!-- Dummy item to prevent EditText from receiving focus -->
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <TextView
        android:id="@+id/getStartedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_get_started"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:id="@+id/stageOneOfSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/getStartedText"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/what_s_your_email"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailSignUpEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext_states"
            android:drawableEnd="@mipmap/transparent"
            android:inputType="textEmailAddress"
            android:paddingBottom="2dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_must_confirm_this_email"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/set_a_password"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/passwordSignUpEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext_states"
            android:inputType="textPassword"
            android:paddingBottom="2dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:drawableEnd="@mipmap/transparent"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/must_be_at_least_8_characters"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stageTwoOfSignUp"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/getStartedText"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/what_is_your_date_of_birth"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.username.your_application.global.customViews.OverriddenEditText
            android:id="@+id/dobSignUpEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext_states"
            android:inputType="none"
            android:drawableEnd="@mipmap/transparent"
            android:paddingBottom="2dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minimum_3_years_old"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/gender"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.username.your_application.global.customViews.OverriddenEditText
            android:id="@+id/genderSignUpEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext_states"
            android:inputType="none"
            android:drawableEnd="@mipmap/transparent"
            android:paddingBottom="2dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soon_done_now"
            android:textColor="@color/white" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/stageThreeOfSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_alignTop="@id/stageTwoOfSignUp"
        android:layout_alignBottom="@id/stageTwoOfSignUp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">
        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/signUpSpinner"
            style="@style/SpinKitView.Large.CubeGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            app:SpinKit_Color="@color/white" />

        <TextView
            android:id="@+id/waitingForEmailVerificationStaticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/please_verify_your_email"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/signUpSpinner"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/dontWorryWellWaitID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/waitingForEmailVerificationStaticText"
            android:layout_centerHorizontal="true"
            android:text="@string/don_t_worry_i_ll_be_waiting_here"
            android:textColor="@color/white" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dontWorryWellWaitID"
            android:layout_centerHorizontal="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checking_again_in"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/remainingWaitingForEmailVerification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                android:text="5"/>
        </LinearLayout>
    </RelativeLayout>

    <com.rilixtech.materialfancybutton.MaterialFancyButton
        android:id="@+id/next_signup"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/stageOneOfSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/next_caps"
        fancy:mfb_defaultColor="@color/white"
        fancy:mfb_focusColor="@color/darkWhite"
        fancy:mfb_radius="30dp"
        fancy:mfb_textColor="@color/black" />
</RelativeLayout>