<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/landingRootView"
    tools:context="com.username.your_application.entrance.LandingScreenActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/darklogbg"
        android:scaleType="centerCrop"/>

    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spinner"
        style="@style/SpinKitView.Large.CubeGrid"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingBottom="50dp"
        app:SpinKit_Color="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight=".5" >

            <ImageView
                android:id="@+id/logoView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                android:scaleX=".5"
                android:scaleY=".5"
                android:src="@drawable/logo_w_txt_light" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            android:gravity="bottom">

            <com.rilixtech.materialfancybutton.MaterialFancyButton
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:text="@string/sign_up_free"
                fancy:mfb_defaultColor="@color/darkOrange"
                fancy:mfb_focusColor="@color/lighterOrange"
                fancy:mfb_radius="30dp"
                fancy:mfb_textColor="@color/white" />

            <com.rilixtech.materialfancybutton.MaterialFancyButton
                android:id="@+id/facebook_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:text="@string/continue_with_facebook"
                fancy:mfb_defaultColor="@color/faceBookBlue"
                fancy:mfb_focusColor="@color/lighterFaceBookBlue"
                fancy:mfb_radius="30dp"
                fancy:mfb_textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/alrdy_user"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <com.rilixtech.materialfancybutton.MaterialFancyButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:text="@string/login"
                fancy:mfb_defaultColor="#ffffff"
                fancy:mfb_focusColor="#d7d7d7"
                fancy:mfb_radius="30dp"
                fancy:mfb_textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>